--- a/docs/_layouts/template.html
+++ b/docs/_layouts/template.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    {% if page.url == "/" or page.url == "/docs/" %}<link rel="stylesheet" href="/test/assets/css/style-main.css">{% endif %}
-    {% if page.url == "/suppcor/" %}<link rel="stylesheet" href="/test/assets/css/style-supp.css">{% endif %}
-    {% if page.url == "/" or page.url == "/docs/" %}<link rel="stylesheet" href="/assets/css/style-main.css">{% endif %}
-    {% if page.url == "/suppcor/" %}<link rel="stylesheet" href="/assets/css/style-supp.css">{% endif %}
+    {% if page.url == "/" or page.url == "/docs/" %}<link rel="stylesheet" href="/capopt/assets/css/style-main.css">{% endif %}
+    {% if page.url == "/suppcor/" %}<link rel="stylesheet" href="/capopt/assets/css/style-supp.css">{% endif %}
+    <!--{% if page.url == "/" or page.url == "/docs/" %}<link rel="stylesheet" href="/assets/css/style-main.css">{% endif %}
+    {% if page.url == "/suppcor/" %}<link rel="stylesheet" href="/assets/css/style-supp.css">{% endif %}-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
